Tue Mar 25 20:09:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: partially revert r1394 (breaks the LIST
   command, that depends on reading replies line-by-line)

Tue Mar 25 19:08:11 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * server/upsd:
   - improved performance for servers handling many clients by using
     a doubly (instead of a singly) linked list for the clients (so
     that we don't have to traverse the whole list if we want to add
     or remove a client)
   - let the parser deal with fragmented reads from the server and
     the clients (don't duplicate this in the server), just feed it
     with the raw data
   - cleaned up code

Tue Mar 25 18:47:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: performance improvement

Tue Mar 25 18:40:00 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: lower read timeout from the default (neon)
   value of 60 seconds to 10 seconds (to prevent the server from
   declaring the driver stale)

Fri Mar 21 09:59:23 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - replace "--with-lib" by "--with-dev" since we now always distribute
   the shared version of libupsclient. This change allow to build and
   install the static version of libupsclient, along with its helpers
   and manpages.

Sun Mar 23 20:10:15 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c,include/common.h: added select_read/write that
   combine a call to select() and read()/write() so that we don't
   need to duplicate this code
 - clients/upsclient.c,drivers/serial.c: use the above

Sun Mar 23 17:00:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate.c: revert r1383 that horribly broke the drivers
   (sorry about that, didn't quite test this enough)

Fri Mar 21 21:04:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd: revert changes from r1379 which seem to have a bad
   side effect on highly loaded servers
